# PyEnvBuilder

./: .gitignore  .pre-commit-config.yaml  README.md  activate.sh  pyproject.toml
PythonEnv/: create_env.py
py-src/: pyproject.toml
py-src/pyenvbuilder/: __init__.py  __main__.py  cleanup.py  cli.py  config.py  create_env.py  logging_config.py  pre_install_check.py
py-src/pyenvbuilder/tests/: test_cleanup.py  test_cli.py  test_create_env.py  test_init.py  test_pre_install_check.py
pyenvbuilder.xcodeproj/: project.pbxproj
pyenvbuilder.xcodeproj/xcuserdata/superuser.xcuserdatad/xcschemes/: xcschememanagement.plist
requirements/: base.txt  dev.txt  test.txt
test_project/: requirements.txt
