[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyenvbuilder"
version = "0.1.0"
description = "A tool for managing Python virtual environments in Xcode projects"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyenvbuilder"
Repository = "https://github.com/yourusername/pyenvbuilder.git"
Issues = "https://github.com/yourusername/pyenvbuilder/issues"

[project.scripts]
pyenvbuilder = "pyenvbuilder.cli:main"

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pyenvbuilder"
testpaths = [
    "py-src/pyenvbuilder/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 