[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyenvbuilder"
version = "0.1.0"
description = "A tool for managing Python virtual environments in Xcode projects"
requires-python = ">=3.6"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "pyyaml>=6.0.0",
    "wheel>=0.42.0",
    "setuptools>=69.1.1",
    "pip-tools>=7.4.1",
]

[project.scripts]
pyenvbuilder = "pyenvbuilder.cli:main"

[tool.black]
line-length = 88
target-version = ["py36"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pyenvbuilder" 